<resources>
    <string name="app_name">NeVieni</string>
    <string name="discard">Discard</string>
    <string name="alert_no_age">Hey, tell us your birthdate!</string>
    <string name="error_message_download_resources">Klaida siunciant duomenis</string>
    <string name="loading_popup_message_spinner">Loading. Please wait…</string>
    <string name="loading_text">Kraunama. Prasome palaukti…</string>
    <string name="ok_button">Gerai</string>
    <string name="no_request_around_label">Sorry, it seems that there are no events around!</string>
    <string name="add_request_suggestion_label">Press + to add one</string>
    <string name="your_requests_title">Jusu prasymo uzklausos</string>
    <string name="recconnecting_request">No internet connection. Once reconnected it could take a while to recontact the server</string>
    <string name="description_input_label">Type a description about what help you need!</string>
    <string name="type_here_hint">Type here!</string>
    <string name="birth_date_label">Gimimo data:</string>
    <string name="biography_label">Biografija</string>
    <string name="admin_label">admin</string>
    <string name="mail_uri_protocol">mailto:</string>
    <string name="email_content_type">text/plain</string>
    <string name="contact_email_object">A RedVolunteer user want to contact you</string>
    <string name="message_mail_user">Hi %1$s, I\'m %1$s from RedVolunteer</string>
    <string name="toast_email_user_agent_not_installed">There is no email client installed!</string>
    <string name="send_email_picker_title">Send mail…</string>
    <string name="create_request_button_label">Create Request!</string>
    <string name="create_help_request_move_forward">Eiti Toliau!</string>
    <string name="form_not_completely_filled_popup">Visi langeliai turi buti uzpildyti</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="join_request_label_btn">Parasyti asmeniui</string>
    <string name="edit_description_label_btn"> Pakeisti Uzklausos aprasyma</string>
    <string name="accept_edit_label_btn">Isaugoti pakeitimus</string>
    <string name="landmark_icon_descr">Landmark icon</string>
    <string name="view_on_map_label">Perziureti uzklausos lokacija</string>
    <string name="right_button">Right button</string>
</resources>