<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <!--TopBar-->
    <RelativeLayout
        android:id="@+id/attendances_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@color/mainColorRed"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/your_requests_title"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/myrequest_new_request_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_new_event_plus" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/baggar_all_requests"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_request_around_label"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_request_suggestion_label"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/myrequests_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/attendances_top_bar"
        android:divider="@color/cardview_light_background"
        android:dividerHeight="10dp" />

</RelativeLayout>