<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--TopBar-->
    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@color/mainColorRed"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/request_description_backbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Uzklausos Aprasymas"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/delete_request_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_delete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- main body -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- nameitle -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                        <!-- event operations buttons -->

                    <TextView
                        android:id="@+id/request_title_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <Button
                        android:id="@+id/accept_request_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_positive_event_button"
                        android:text="@string/join_request_label_btn"
                        android:textColor="@color/positive_request_green"
                        tools:ignore="ButtonStyle" />


                    <Button
                        android:id="@+id/modify_request_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_primary"
                        android:text="@string/edit_description_label_btn"
                        android:textColor="@color/colorPrimaryDark"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:id="@+id/accept_modification_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_positive_event_button"
                        android:text="@string/accept_edit_label_btn"
                        android:textColor="@color/positive_request_green"
                        tools:ignore="ButtonStyle" />


                </LinearLayout>

                <!-- main description -->
                <EditText
                    android:id="@+id/request_description_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="Parasykite aprasyma cia!"
                    android:inputType="textMultiLine"
                    android:paddingBottom="65dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="0dp"
                    android:textColor="@drawable/textdescription_selector" />

                <!-- event location -->
                <LinearLayout
                    android:id="@+id/open_map_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#E5E5E5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/landmark_icon_descr"
                        android:src="@drawable/ic_landmark" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/place_name_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="160dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/city_name_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="160dp"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/view_on_map_label"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:contentDescription="@string/right_button"
                            android:src="@drawable/forward_icon" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>

